media/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: media
spec:
  selector:
    app: ombi
  ports:
  - name: ombi
    port: 3579
    targetPort: ombi
