media/ombi/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ombi
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: ombi
  ingress:
  - ports:
    - port: 3579
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
